# checklist

./: .gitignore  BUILD.bazel  WORKSPACE.bazel  gazelle.sh  go.sum  repositories.bzl
cmd/benchmark_incremental/: BUILD.bazel
cmd/benchmark_initial/: BUILD.bazel
cmd/benchmark_trace/: BUILD.bazel
cmd/benchmark_updates/: BUILD.bazel
cmd/rpc_client/: BUILD.bazel
cmd/rpc_server/: BUILD.bazel
cmd/sbproxy/: BUILD.bazel
cmd/sbtunnel/: BUILD.bazel
cmd/stress/: BUILD.bazel
driver/: BUILD.bazel  pir_server_driver.go
example/: BUILD.bazel
modules/dpf-go/: BUILD.bazel
modules/dpf-go/dpf/: BUILD.bazel
pir/: BUILD.bazel  test_util.go
psetggm/: BUILD.bazel
psetggm/tests/: Makefile
rpc/: BUILD.bazel
safebrowsing/: BUILD.bazel
testing/: BUILD.bazel
updatable/: BUILD.bazel
