load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "safebrowsing",
    srcs = [
        "hash.go",
        "safebrowsing.pb.go",
    ],
    importpath = "checklist/safebrowsing",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto",
        "@com_github_golang_protobuf//ptypes/duration",
    ],
)
