load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testing",
    srcs = ["benchmark_trace.go"],
    importpath = "checklist/testing",
    visibility = ["//visibility:public"],
    deps = [
        "//driver",
        "//pir",
        "//updatable",
        "@org_golang_x_crypto//curve25519",
        "@tools_gotest//assert",
    ],
)
