load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "benchmark_incremental_lib",
    srcs = ["benchmark_incremental.go"],
    importpath = "checklist/cmd/benchmark_incremental",
    visibility = ["//visibility:private"],
    deps = [
        "//driver",
        "//pir",
        "//updatable",
        "@tools_gotest//assert",
    ],
)

go_binary(
    name = "benchmark_incremental",
    embed = [":benchmark_incremental_lib"],
    visibility = ["//visibility:public"],
)
