load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "rpc_server_lib",
    srcs = ["rpc_server.go"],
    importpath = "checklist/cmd/rpc_server",
    visibility = ["//visibility:private"],
    gc_goopts = [ "-N", "-l" ],
    deps = [
        "//driver",
        "//rpc",
        "//safebrowsing",
    ],
)

go_binary(
    name = "rpc_server",
    embed = [":rpc_server_lib"],
    visibility = ["//visibility:public"],
    gc_goopts = [ "-N", "-l" ],
)
