load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sbproxy_lib",
    srcs = ["sbproxy.go"],
    importpath = "checklist/cmd/sbproxy",
    visibility = ["//visibility:private"],
    deps = [
        "//driver",
        "//pir",
        "//safebrowsing",
        "//updatable",
        "@com_github_golang_protobuf//proto",
        "@com_github_golang_protobuf//ptypes/duration",
    ],
)

go_binary(
    name = "sbproxy",
    embed = [":sbproxy_lib"],
    visibility = ["//visibility:public"],
)
